# banksym

./: .gitignore  README.md  about.txt  banksym.db  properties.md  pyproject.toml  run.ps1  run.sh
src/banksym/: __init__.py  settings.py  simulation.py
src/banksym/api/: __init__.py  app.py  architecture.py  container.py  deps.py  schemas.py
src/banksym/api/routers/: auth.py  banking.py  banks.py  oauth.py  settlement.py  simulation.py
src/banksym/capabilities/: __init__.py
src/banksym/capabilities/auth/: __init__.py  base.py  simple.py
src/banksym/capabilities/localization/: __init__.py  address.py  base.py  packs.py
src/banksym/capabilities/settlement/: __init__.py  base.py  interbank.py  netting.py  rtgs.py
src/banksym/capabilities/txgen/: __init__.py  base.py  personas.py  rulebased.py
src/banksym/core/: __init__.py
src/banksym/core/domain/: __init__.py  account.py  customer.py  ledger.py  transaction.py
src/banksym/core/kernel/: __init__.py  errors.py  ids.py  money.py  registry.py
src/banksym/persistence/: __init__.py  engine.py  models.py  repositories.py
src/banksym/tenancy/: __init__.py  bank.py  repository.py  service.py
tests/: conftest.py  test_api.py  test_auth.py  test_bank_lifecycle.py  test_berlin_group.py  test_ledger.py  test_localization.py  test_money.py  test_personas.py  test_pis.py  test_settlement.py  test_settlement_cycle_api.py  test_settlement_engines.py  test_txgen.py
ui/: BankSym Hero.html  bank-login.html  builder.html  console.html  docs.html  home.html  index.html  live.html  psd2-callback.html  psd2.html
(+10 files in other folders)
