[project]
name = "banksym"
version = "0.1.0"
description = "BankSym — a configurable, multi-tenant test bank framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "import-linter>=2.0",
    "faker>=25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banksym"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.importlinter]
root_package = "banksym"

[[tool.importlinter.contracts]]
name = "Core never imports capabilities"
type = "forbidden"
source_modules = ["banksym.core"]
forbidden_modules = ["banksym.capabilities"]

[[tool.importlinter.contracts]]
name = "Core never imports protocol/api layers"
type = "forbidden"
source_modules = ["banksym.core"]
forbidden_modules = ["banksym.api", "banksym.tenancy"]
